--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-gatsby-blog-studio",
+  "name": "platform-liberty-studio",
   "version": "1.0.7",
   "main": "package.json",
   "author": "Sanity <hello@sanity.io>",
@@ -13,21 +13,26 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^1.149",
-    "@sanity/cli": "^1.149",
-    "@sanity/components": "^1.149",
-    "@sanity/core": "^1.149",
-    "@sanity/dashboard": "^1.149",
-    "@sanity/default-layout": "^1.149",
-    "@sanity/default-login": "^1.149",
-    "@sanity/desk-tool": "^1.149",
-    "@sanity/studio-hints": "^1.149",
+    "@sanity/base": "^1.149.10",
+    "@sanity/cli": "^1.149.9",
+    "@sanity/components": "^1.149.10",
+    "@sanity/core": "^1.149.12",
+    "@sanity/dashboard": "^1.149.10",
+    "@sanity/default-layout": "^1.149.10",
+    "@sanity/default-login": "^1.149.11",
+    "@sanity/desk-tool": "^1.149.10",
+    "@sanity/studio-hints": "^1.149.10",
+    "axios": "^0.19.2",
     "date-fns": "^1.30.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "qs": "^6.9.4",
+    "react": "^16.13.1",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.10.0",
+    "react-youtube": "^7.11.2",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.10",
-    "sanity-plugin-dashboard-widget-netlify": "^1.0.1"
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
+    "sanity-plugin-media": "^0.2.10"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
