--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@sanity/cli": "^1.149.9",
+    "@sanity/cli": "^1.149.13",
     "lerna": "^3.13.1"
+  },
+  "dependencies": {
+    "gatsby": "^2.21.24",
+    "gatsby-plugin-sharp": "^2.6.2",
+    "get-youtube-id": "^1.0.1",
+    "react-youtube": "^7.11.2"
   }
 }
